[package]
name = "wlproxy"
version = "0.2.0"
edition = "2021"
description = "Filter/modify Wayland messages from clients"
readme = "README.md"
repository = "https://github.com/powerman/wlproxy"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
defer = "0.2"
libc = "0.2"
sd-notify = "0.5"
uds = "0.4"
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
uds = "0.4"
